keep only one record of member request  (#230)
* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次

* 加入组织申请只保留一次
