# api/rest_docs.go
@@ -1,4 +1,4 @@
-// Code generated by swaggo/swag. DO NOT EDIT
+// Package api Code generated by swaggo/swag. DO NOT EDIT
 package api
 
 import "github.com/swaggo/swag"
@@ -616,6 +616,7 @@ const docTemplaterest = `{
                         "items": {
                             "type": "string"
                         },
+                        "collectionFormat": "csv",
                         "description": "filter by roles",
                         "name": "roles",
                         "in": "query"
@@ -1062,11 +1063,8 @@ const docTemplaterest = `{
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
+                    "204": {
+                        "description": "No Content"
                     }
                 }
             }
@@ -2284,6 +2282,8 @@ var SwaggerInforest = &swag.Spec{
 	Description:      "",
 	InfoInstanceName: "rest",
 	SwaggerTemplate:  docTemplaterest,
+	LeftDelim:        "{{",
+	RightDelim:       "}}",
 }
 
 func init() {
