# api/web_docs.go
@@ -1,4 +1,4 @@
-// Code generated by swaggo/swag. DO NOT EDIT
+// Package api Code generated by swaggo/swag. DO NOT EDIT
 package api
 
 import "github.com/swaggo/swag"
@@ -595,6 +595,7 @@ const docTemplateweb = `{
                         "items": {
                             "type": "string"
                         },
+                        "collectionFormat": "csv",
                         "description": "filter by roles",
                         "name": "roles",
                         "in": "query"
@@ -1041,11 +1042,8 @@ const docTemplateweb = `{
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controller.ResponseData"
-                        }
+                    "204": {
+                        "description": "No Content"
                     }
                 }
             }
@@ -2632,6 +2630,8 @@ var SwaggerInfoweb = &swag.Spec{
 	Description:      "",
 	InfoInstanceName: "web",
 	SwaggerTemplate:  docTemplateweb,
+	LeftDelim:        "{{",
+	RightDelim:       "}}",
 }
 
 func init() {
